-------

- Issue #17192: Restore the patch for Issue #11729 and Issue #10309
  which were omitted in 3.2.4 when updating the bundled version of
  libffi used by ctypes.

- Issue #15535: Fix namedtuple pickles which were picking up the OrderedDict
  instead of just the underlying tuple.

- Issue #1159051: Back out a fix for handling corrupted gzip files that
  broke backwards compatibility.

Build
-----

- Issue #17857: Prevent build failures with pre-3.5.0 versions of sqlite3,
  such as was shipped with Centos 5 and Mac OS X 10.4.

Tests
-----

- Issue #17843: Removed bz2 test data file that was triggering false-positive
  virus warnings with certain antivirus software.


What's New in Python 3.2.4?
===========================

*Release date: 07-Apr-2013*

Library
-------

- Issue #17625: In IDLE, close the replace dialog after it is used.


What's New in Python 3.2.4 release candidate 1?
===============================================

*Release date: 24-Mar-2013*

Core and Builtins
-----------------

- Issue #1692335: Move initial args assignment to
  BaseException.__new__ to help pickling of naive subclasses.

- Issue #17275: Corrected class name in init error messages of the C version of
  BufferedWriter and BufferedRandom.

- Issue #7963: Fixed misleading error message that issued when object is
  called without arguments.

- Issue #5308: Raise ValueError when marshalling too large object (a sequence
  with size >= 2**31), instead of producing illegal marshal data.

- Issue #12983: Bytes literals with invalid \x escape now raise a SyntaxError
  and a full traceback including line number.

- Issue #17173: Remove uses of locale-dependent C functions (isalpha() etc.)
  in the interpreter.

- Issue #17043: The unicode-internal decoder no longer read past the end of
  input buffer.

- Issue #16979: Fix error handling bugs in the unicode-escape-decode decoder.

- Issue #10156: In the interpreter's initialization phase, unicode globals